@@ -1,3 +1,8 @@
+2007-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* nnagent.el (nnagent-request-set-mark): Also set the marks for the
+	original back end that keeps marks in the local system.
+
 2007-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-article-summary-command-nosave): Don't set the 3rd
